--- a/index.html
+++ b/index.html
@@ -749,6 +749,48 @@ Carl Strathearn, Dimitra Gkatzia
           <p>Invited Speakers</p>
         </div>
 
+
+	      
+        <div class="row">
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/speaker/Marcel-Worring.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://staff.fnwi.uva.nl/m.worring/">Marcel Worring</a></h4>
+                <span>University of Amsterdam</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/speaker/sato.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="http://research.nii.ac.jp/~satoh/index.html">Shin'ichi Satoh</a></h4>
+                <span>National Institute of Informatics</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up">
+              <div class="member-img">
+                <img src="assets/img/speaker/ShahChirag.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4><a href="https://chiragshah.org/">Chirag Shah</a></h4>
+                <span>University of Washington</span>
+              </div>
+            </div>
+          </div>
+
+          </div>
+
 <!--         <div class="row">
             <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
               <div class="member" data-aos="fade-up">
@@ -821,7 +863,6 @@ Carl Strathearn, Dimitra Gkatzia
             </div> -->
 
 <!--           </div>  -->
-	      <p>TBA</p>
       </div>
     </section><!-- End Speaker Section -->
 
